--- a/client/src/assets/scss/layout/_footer.scss
+++ b/client/src/assets/scss/layout/_footer.scss
@@ -6,12 +6,24 @@
     display: flex;
     column-gap: 2em;
 
+    .header {
+        color: aqua;
+        font-weight: 500;
+    }
+
+    &_mobile {
+        display: flex;
+    }
+
     &__left {
         max-width: 30%;
 
         &__about {
             display: flex;
             flex-wrap: wrap;
+            &_desc {
+                text-align: justify;
+            }
         }
 
         &__logo {
@@ -54,16 +66,126 @@
         }
 
         &__contacts {
+            display: flex;
+            flex-direction: column;
 
-            div {
-                display: flex;
-                gap: 1em;
+            &__details {
+                div {
+                    display: flex;
+                    gap: 1em;
 
-                p {
-                    margin: 0 0 10px 0;
+                    p {
+                        margin: 0 0 10px 0;
+                    }
                 }
             }
         }
+    }
+
+}
+
+@include utils.breakpoint(small) {
+    .footer {
+        padding: 10px 20px;
+        flex-direction: row-reverse;
+
+        &_mobile {
+            column-gap: 0.5em;
+            justify-content: flex-end;
+            flex-direction: column-reverse;
+        }
+
+        &__left,
+        &__rigth,
+        &__mid {
+            flex-grow: 1;
+        }
+
+        &__left {
+            display: flex;
+            flex-wrap: wrap;
+            align-content: flex-start;
+
+            &__logo {
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    width: 35%;
+                    height: 30px;
+                }
+
+                &-text {
+                    font-size: 15px;
+                }
+
+            }
+
+            &__about {
+                width: 100%;
+                font-size: 15px;
+            }
+        }
+
+        &__mid {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+
+            &__about {
+                display: flex;
+                flex-wrap: wrap;
+                font-size: 15px;
+            }
+
+            &__logo {
+                gap: 0.5em;
+
+                img {
+                    width: 100px;
+                }
+            }
+        }
+
+        &__right {
+            flex-direction: column;
+            gap: 1em;
+
+
+            &__links {
+
+                li {
+                    margin-bottom: 5px;
+                }
+            }
+
+            &__contacts {
+                display: flex;
+                flex-direction: column;
+
+                &__details {
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    div {
+                        gap: 0.5em;
+
+                        p {
+                            margin: 0 0 5px 0;
+                            font-size: 14px;
+
+                        }
+                    }
+                }
+
+                // &__details {
+                //     display: flex;
+                //     flex-wrap: wrap;
+                // }
+            }
+        }
+
     }
 
 }
