--- a/client/src/assets/scss/layout/home/_banner.scss
+++ b/client/src/assets/scss/layout/home/_banner.scss
@@ -4,7 +4,6 @@
     margin: 0 80px;
     min-height: 100vh;
 
-
     .banner {
         margin: 20px 0 50px 0px;
         display: flex;
@@ -88,6 +87,38 @@
 
             .shop_now:active {
                 transform: scale(0.9, 0.9);
+            }
+        }
+    }
+}
+
+
+@include utils.breakpoint(small) {
+    .home {
+        margin: 0 10px;
+
+        .banner {
+            margin: 10px 0 20px 0px;
+
+            .carousel {
+
+                .arrow {
+                    width: 1.5rem;
+                    height: 1.5rem;
+                }
+
+                .slide {
+                    height: 200px;
+                }
+
+                .shop_now {
+                    width: 100px;
+                    height: 20px;
+                    bottom: 40px;
+                    right: 40px;
+                    border-radius: 5px;
+                    font-size: 14px;
+                }
             }
         }
     }
