--- a/client/src/assets/scss/layout/like/_like.scss
+++ b/client/src/assets/scss/layout/like/_like.scss
@@ -78,15 +78,6 @@
         opacity: 0.4;
     }
 
-    &-subtotal {
-        display: flex;
-        justify-content: flex-end;
-        padding-right: 20px;
-        background-color: utils.$color-white;
-        color: utils.$color-black;
-        margin: 20px 0;
-    }
-
     .add-to-cart {
         width: 150px;
         height: 50px;
@@ -106,5 +97,64 @@
     .add-to-cart:active {
         outline: 2px solid utils.$color-cyan-lightest;
         outline-offset: 2px;
+    }
+}
+
+
+@include utils.breakpoint(small) {
+
+    .like {
+        margin: 20px 40px;
+
+
+        &-items {
+            padding: 20px;
+            border: 1px solid utils.$color-white;
+        }
+
+        &-heading {
+            font-size: 16px;
+        }
+
+        &-item {
+            flex-direction: column;
+            align-items: center;
+
+            &-image {
+                img {
+                    width: 120px;
+                    height: 120px;
+                }
+            }
+
+            &-details {
+                display: flex;
+                flex-wrap: wrap;
+
+                &-heading {
+                    font-size: 16px;
+                }
+            }
+
+            &-price {
+                font-size: 30px;
+                flex-direction: row;
+                width: 100%;
+                justify-content: flex-start;
+
+                div {
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+
+        .add-to-cart {
+            width: 120px;
+            height: 40px;
+            font-size: 16px;
+            border: none;
+        }
     }
 }
