--- a/client/src/assets/scss/layout/signup/_signup.scss
+++ b/client/src/assets/scss/layout/signup/_signup.scss
@@ -43,8 +43,6 @@
       color: utils.$color-white;
     }
 
-
-
     input {
       padding: 15px;
       margin: 10px 0px;
@@ -97,6 +95,50 @@
         margin-top: 15px;
         margin-bottom: 30px;
         color: utils.$color-black;
+      }
+    }
+  }
+}
+
+
+@include utils.breakpoint(small) {
+
+  .signup {
+
+    .form-container {
+
+      h1 {
+        font-size: 16px;
+      }
+
+      form {
+        width: 90vw;
+      }
+
+      .submit-btn {
+        font-size: 16px;
+      }
+
+      label {
+        font-weight: bold;
+        font-size: 14px;
+      }
+
+      input:invalid[focused=true]~span {
+        display: block;
+      }
+
+      .signin-account {
+
+        &-span {
+          color: utils.$color-cyan-light;
+          font-size: 14px;
+        }
+
+        &-btn {
+          width: 130px;
+          font-size: 14px;
+        }
       }
     }
   }
