--- a/client/src/assets/scss/layout/shipping/_shipping.scss
+++ b/client/src/assets/scss/layout/shipping/_shipping.scss
@@ -335,10 +335,13 @@
             }
         }
 
+        h2{
+            text-align: center;
+        }
+
         .order-placed-wrapper {
             min-width: 100%;
 
-            h2,
             p {
                 margin: 0;
                 padding: 0;
@@ -485,7 +488,7 @@
                 width: 100%;
                 padding: 5px;
                 font-size: 12px;
- 
+
                 .success-icon {
                     font-size: 35px;
                 }
